k3s/kustomize/bases/container-registry/ui/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: container-registry-ui
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
      - match: Host(`registry-ui.staging.local.hejsan.xyz`)
        kind: Rule
        services:
          - name: container-registry-ui
            port: http
  tls:
    secretName: local-hejsan-xyz-tls
